# spark_airflow

./: pyproject.toml
dags/: movie.py
pyspark/: movie_join_df.py  movie_sum.py
src/pyspark_airflow/: .repartition.py.swp  repartition.py
zeppelin_note/: movie_spark_2K5NYW4GJ.zpln  width_picture_2K47UYCMT.zpln
